--- a/main.html
+++ b/main.html
@@ -1,16 +1,80 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<div>
+		<label for="">Name</label>
+		<input type="text" id="name" class="name" value="your name" required><br>
+		<label for="">Email</label>
+		<input type="email" id="email" class="email" value="your email" required>
+		<fieldset>
+			<legend>Select your gender</legend>
+				<div>
+					<input required type="radio" id="male" class="gender" name="gender" value="male">
+					<label for="male"> Male</label>
+					<input required type="radio" id="female" class="gender" name="gender" value="female">
+					<label for="male"> Female</label>
+				</div>	
+		</fieldset>
+			<label for="cars">Car Brand:</label>
+			<select id="cars" name="cars" required>
+				<option value="BMW">BMW</option>
+				<option value="Audi">Audi</option>
+				<option value="Mercedez">Mercedez</option>
+			</select>
+			<br>
+
+
+		<label for="age">Car Age</label>
+		<input type="number" id="carage"><br>
+
+		<label for="dop">Date of Purchase(dop)</label>
+		<input type="date" id="dop" required><br>
+		<label for="password">Password</label>
+		<input type="password" id="password" required><br>
+
+		<div>
+    <input type="submit" value="Send" accesskey="s" />
+  </div>
+		</div>
+
+	</form>
+	<form method="POST">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name" required>
+  <br>
+  <label for="email">Email:</label>
+  <input type="email" id="email" name="email" required>
+  <br>
+  <label for="gender">Gender:</label>
+  <input type="radio" name="gender" value="male" required> Male
+  <input type="radio" name="gender" value="female" required> Female
+  <br>
+  <label for="cars">Car Brand:</label>
+  <select id="cars" name="cars" required>
+    <option value="BMW">BMW</option>
+    <option value="Audi">Audi</option>
+    <option value="Mercedez">Mercedez</option>
+  </select>
+  <br>
+  <label for="carage">Car Age:</label>
+  <input type="number" id="carage" name="carage" required>
+  <br>
+  <label for="dop">Date of Purchase:</label>
+  <input type="date" id="dop" name="dop" required>
+  <br>
+  <label for="password">Password:</label>
+  <input type="password" id="password" name="password" required>
+  <br>
+  <button type="submit">Submit</button>
+</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
-
 </html>
